--- a/manifest.json
+++ b/manifest.json
@@ -3,32 +3,34 @@
   "name": "YouTubeFocus",
   "version": "1.0",
   "icons": {
-      "16": "/media/icon16.png",
-      "32": "/media/icon32.png",
-      "48": "/media/icon48.png",
-      "128": "/media/icon128.png"
+    "16": "/media/icon16.png",
+    "32": "/media/icon32.png",
+    "48": "/media/icon48.png",
+    "128": "/media/icon128.png"
   },
   "description": "A Google Chrome extension for YouTube, designed to declutter and minimize distraction",
   "permissions": [
-      "webNavigation",
-      "activeTab",
-      "tabs",
-      "storage",
-      "https://www.youtube.com/*"
+    "webNavigation",
+    "activeTab",
+    "tabs",
+    "storage",
+    "https://www.youtube.com/*"
   ],
   "browser_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-          "16": "/media/icon16.png"
-      }
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/media/icon16.png"
+    }
   },
   "background": {
-      "scripts": ["background.js"],
-      "persistent": false
+    "scripts": ["background.js"],
+    "persistent": false
   },
-  "content_scripts": [{
+  "content_scripts": [
+    {
       "matches": ["https://www.youtube.com/*"],
       "js": ["content.js"],
       "run_at": "document_idle"
-  }]
+    }
+  ]
 }
